- Fix gap between sections in mobile

--- a/css/index/mobile.css
+++ b/css/index/mobile.css
@@ -43,4 +43,8 @@
         margin-right: 0%;
     }
 
+    .sectionGap {
+        margin-bottom: 60px;
+    }
+    
 }
